--- a/genindex.html
+++ b/genindex.html
@@ -882,6 +882,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="python2verilog.ir.html#python2verilog.ir.graph.Element.view_children">view_children() (Element method)</a>
+</li>
       <li><a href="python2verilog.ir.html#python2verilog.ir.graph.BasicElement.visit_nonclocked">visit_nonclocked() (BasicElement method)</a>
 
       <ul>
